[project]
name = "reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ale-py>=0.11.1",
    "gymnasium[atari]>=1.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "torch",
    "torchsummary>=1.5.1",
    "uno",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
uno = { git = "https://github.com/Magniquick/uno" }
